Bug 136111 - Scaling problem on chart driven by a macro.
Summary: Scaling problem on chart driven by a macro.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.4.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0 target:7.2.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Chart
  Show dependency treegraph
 
Reported: 2020-08-25 13:42 UTC by Gülşah Köse
Modified: 2021-12-06 13:28 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (18.62 KB, application/vnd.oasis.opendocument.spreadsheet)
2020-08-25 13:43 UTC, Gülşah Köse
Details
Comparision before and after macro (40.69 KB, application/pdf)
2020-08-25 13:44 UTC, Gülşah Köse
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gülşah Köse 2020-08-25 13:42:51 UTC
Description:
The bars don't fit into the chart wall after running maco.

Steps to Reproduce:
Preparition: Check your macro level to run the macro (Tools->Options->Security->Macro security)

1. Open sample.ods
2. Click "Do test" button on the chart.


Actual Results:
Bars should fit into chart.

Expected Results:
Bars don't fit into chart wall. 


Reproducible: Always


User Profile Reset: No



Additional Info:
See the compare.pdf for clear understanding
Comment 1 Gülşah Köse 2020-08-25 13:43:41 UTC
Created attachment 164674 [details]
Sample file
Comment 2 Gülşah Köse 2020-08-25 13:44:29 UTC
Created attachment 164675 [details]
Comparision before and after macro
Comment 3 Gülşah Köse 2020-08-25 13:46:30 UTC
Regression detected: 111c260ab2883b7906f1a66e222dbf4dc3c58c4f
Comment 4 Aron Budea 2021-11-08 13:06:24 UTC
(In reply to Gülşah Köse from comment #3)
> Regression detected: 111c260ab2883b7906f1a66e222dbf4dc3c58c4f

https://cgit.freedesktop.org/libreoffice/core/commit/?id=111c260ab2883b7906f1a66e222dbf4dc3c58c4f
author		Balazs Varga <balazs.varga991@gmail.com>	2019-10-03 20:31:44 +0200
committer	László Németh <nemeth@numbertext.org>	2019-10-07 12:36:28 +0200

tdf#127777 OOXML chart export: fix "CrossBetween" for not imported charts
Comment 5 Commit Notification 2021-11-10 15:03:54 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/453363ae1384a6d6f2c77052170b39a1ebf567a6

tdf#136111 fix scaling problem on chart driven by a macro

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2021-11-15 11:36:50 UTC
Verified in

Version: 7.3.0.0.alpha1+ / LibreOffice Community
Build ID: e6968f0485cfb2f6c941d11c438386e14a47095d
CPU threads: 4; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Andras Timar, thanks for fixing this issue!
Comment 7 Commit Notification 2021-11-15 11:37:47 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/80ada110c56398e984d3f2d1f0ae1f30e8a73690

tdf#136111 fix scaling problem on chart driven by a macro

It will be available in 7.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Christian Lohmaier 2021-12-06 13:28:48 UTC
7.2.4 was a hotfix release, updating target in status-whiteboard