tdf#136111 fix scaling problem on chart driven by a macro

Change-Id: I9a55bcfceb9259f0d5dc944c00a34b3e4a891e0e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/124940
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Dennis Francis <dennis.francis@collabora.com>
(cherry picked from commit 0644f44daef7caa8a246221d762fbc0f6af3672c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/124864
Tested-by: Jenkins
Reviewed-by: Andras Timar <andras.timar@collabora.com>